# language-incubator

./: .gitignore  LICENSE  README.md  TASKS  index.html  params.json
bf/: Makefile  bf.fs  bfdecomp.hs  bfeff.hs  bfhello.cpp  bfi1.cpp  bfi1.hs  bfi1.rs  bfi2.rs  bfi3.rs  bfi4.rs  brainfuck.cpp  brainfuck.h  std.h
bf/bf/: asc.bf  bfi.bf  bfi2.bf  c.bfi.bf  comentado-teste.bf  dbfi.bf  hello.bf  hello2.bf  inp.bf  inputtest.bf  mensagem.bf  meuprog.bf  numwarp.bf  teste.bf  tst2.bf  yuck.bf
bf/bfjc/: Cargo.toml
c/: dl.c  memoize.cc
c/hello_jit/: Cargo.toml  README.md
docs/: _config.yml  index.md
docs/js/: crates.js  search-index.js  settings.html  source-files.js
emu/bcpu/: BCPU.py  countdown.bcpu  powers_of_two.bcpu
ffi/py/c/: CMakeLists.txt  spam.c
forth/efs/: erl_forth.erl
forth/mips/: README.md  mforth.S
fp/: LambdaSimpl.hs  cek.hs  interp.idr  lamcalc.cpp
fp/isabelle/: AExp.thy  Primitives.thy
fp/secd/: README.md  compile.scm  eval.scm  eval.secd  scm2secd.scm  scm2secd.secd  secd.c  test1.secd  test2.secd  test_fact.secd  test_io.secd  test_tco.secd
fp/secdjs/: index.html  secd.js
fp/tapl/: Makefile  arithm.pl  fullref.pl  fullref.plt  fullsimple.pl  fullsimple.plt  lambda.pl  simplebool.hs  simplebool.pl
js/slothjs/: .rustfmt.toml  Cargo.toml  README.md  build.rs  index.js  package.json
js/slothjs/benches/: eval.rs
js/slothjs/cli/: Cargo.toml
js/slothjs/cli/src/: main.rs
js/slothjs/docs/: DOC.md  TODO.org
js/slothjs/src/: ast.rs  error.rs  function.rs  heap.rs  interpret.rs  lib.rs  main.rs  naive.rs  object.rs  parse.rs  prelude.rs  runtime.rs  source.rs  test.rs  value.rs
js/slothjs/src/ast/: display.rs  expr.rs  mod.rs  stmt.rs
js/slothjs/src/builtin/: array.rs  boolean.rs  console.rs  error.rs  function.rs  global.rs  mod.rs  object.rs  string.rs
js/slothjs/src/heap/: mod.rs  object.rs  value.rs
js/slothjs/src/parse/: estree.rs  heapnode.rs  jsonnode.rs  mod.rs  serde.rs  test.rs
js/slothjs/src/runtime/: esprima.rs  mod.rs  nodejs.rs
js/slothjs/src/test/: interp.rs  mod.rs
js/slothjs/tests/: node.rs  parse.rs
js/slothjs/wasm/: Cargo.toml  README.md
js/slothjs/wasm/demo/: README.md  package.json  webpack.config.js
js/slothjs/wasm/demo/src/: index.js  style.css
js/slothjs/wasm/src/: lib.rs
js/slothjs/wasm/tests/: web.rs
llvm/: sum.c
llvm/kldscp/: Makefile  ast.c  ast.cpp  ast.h  codegen.cpp  codegen.h  fib.kld  kldscp.hs  lexer.c  lexer.h  main.c  main.cpp  math.kld  parser.c  parser.h  sqrt.kld
llvm/ll/: ex1.c  ex2.ll  hello.ll
llvm/succ/: stack.yaml  succ.cabal
rel/: expr.pl  httpc.pl  rel.rb
rel/chr/: fib.pl  gcd.pl  gcd1.pl  (+3 more)
x86/: .hasm_history  README.md  hasm.hs  hasm.sh
(+459 files in other folders)
