[package]
name = "slothjs"
version = "0.1.0"
authors = ["Dmytro S <me@dmytrish.net>"]
edition = "2018"
default-run = "sljs-node"

[features]
default = ["std"]
std = ["serde/std"]

[dependencies]
atty = "0.2"
bitflags = "1.2.1"
hashbrown = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
