[workspace]
default-members = [ ".", "cli" ]
members = [
    ".",
    "cli",
    "wasm",
]

[package]
authors = ["Dmytro S <me@dmytrish.net>"]
edition = "2021"
name = "slothjs"
version = "0.1.0"

[features]
default = ["std"]
std = ["serde/std"]

[dependencies]
bitflags = "1.2.1"
hashbrown = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
serde_json = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "eval"
harness = false
