name:                succ
version:             0.1.0.0
synopsis:            Simple Ugly C Compiler
description:         A compiler of C subset using LLVM and 
homepage:            https://github.com/EarlGray/lang/llvm/succ/#readme
license:             BSD3
license-file:        LICENSE
author:              Dmytro S.
maintainer:          dmytrish@gmail.com
copyright:           2016 Dmytro S.
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable succ
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
