[package]
name = "slothjs-wasm"
version = "0.1.0"
authors = ["Dmytro S <me@dmytrish.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
slothjs = { path = "..", default-features = false }
serde_json = "1.0"

wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

#[profile.release]
#opt-level = "s"
